--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="style.css" />
         <title> test de voiture </title>
   </head>
 <body>
